--- a/index.html
+++ b/index.html
@@ -186,6 +186,51 @@
                 </div>
             </div>
         </section>
+        <section class="news">
+            <div class="title">
+                <h2>Latest News</h2>
+                <p>Here are some latest news from football. You can see the details of those news in details.</p>
+            </div>
+            <div class="news-wrap">
+                <div class="news-box">
+                    <div class="news">
+                        <img src="images/news/n1.jpg" alt="news">
+                        <div  class="details">
+                        <h2>Euro 2020: Harry Maguire's Father Broke Ribs In Wembley Fan Violence</h2>
+                        
+                            <p>Euro 2020: Harry Maguire's Father Broke Ribs In Wembley Fan ViolenceHarry Maguire's father was caught in the violence as ticketless fans tried to enter Wembley for the Euro 2020 Final between England and Italy.Abhimanyu BoseUpdated: July 14, 2021 03:52 PM ISTRead Time: 2 min.Maguire's father Alan had his ribs broken and was struggling to breathe, the centre back told The Sun. His agent Kenneth Shepherd was also caught in the violence along with his father. "It was scary," the Manchester United captain said of his father's ordeal. "It was not a nice experience - it shook him up."</p>
+                        </div> 
+                    </div>
+                    <div class="news">
+                        <img src="images/news/n2.jpg" alt="news">
+                        <div  class="details">
+                        <h2>Asian Champions Qatar Held By Panama In Gold Cup Opener</h2>
+                        <p>Asian Champions Qatar Held By Panama In Gold Cup OpenerAsian champions Qatar were held to a 3-3 draw by Panama in their opening CONCACAF Gold Cup Group D game on Tuesday.Agence France-PresseUpdated: July 14, 2021 09:40 AM ISTRead Time: 2 min
+
+                            Asian Champions Qatar Held By Panama In Gold Cup Opener
+                            Qatar and Panama played out a 3-3 draw on Tuesday.© AFP
+                            Highlights
+                            Qatar played out a 3-3 draw against Panama in Gold Cup openerQatar took the lead three times but were pegged back by the PanamaniansThe game was delayed by nearly two hours after a severe weather warning
+                            Asian champions Qatar were held to a 3-3 draw by Panama in their opening CONCACAF Gold Cup Group D game on Tuesday. Qatar, playing in the championship for teams from North America, Central America and the Caribbean as part of their preparations for the 2022 World Cup, took the lead three times but were pegged back by the Panamanians. The game in Houston was delayed by nearly two hours after a severe weather warning. Qatar took the lead in the 48th minute, Akram Arif sweeping home emphatically from close range after Pedro Miguel headed into his path from the edge of the six-yard area.</p>
+                    </div>
+                </div>
+                    <div class="news">
+                        <img src="images/news/n3.jpg" alt="news">
+                        <div  class="details">
+                        <h2>"I'm Marcus Rashford, 23, Black": Racially Abused After Euro 2020 Loss, England Footballer's Powerful Note</h2>
+                        <p>"I'm Marcus Rashford, 23, Black": Racially Abused After Euro 2020 Loss, England Footballer's Powerful NoteMarcus Rashford, Jadon Sancho and Bukayo Saka, the three players who missed England's penalties, were the victims of a stream of abuse on social media.Santosh RaoUpdated: July 13, 2021 10:40 AM ISTRead Time: 2 min
+                            35
+                            "Im Marcus Rashford, 23, Black": Racially Abused After Euro 2020 Loss, England Footballers Powerful Note
+                            Marcus Rashford tweeted an emotional note after England's Euro 2020 heartbreak.© AFP
+                            Highlights
+                            Marcus Rashford takes to Twitter to send out a powerful messageRashford had missed his penalty in England's shoot-out loss to ItalyRashford and other England players were victims of abuse on social media
+                            England star Marcus Rashford shared a heartfelt note on his Twitter handle, apologising for his penalty miss in England's shoot-out loss to Italy in the Euro 2020 final on Sunday. Rashford was among three England players to miss their spot-kicks in the shoot-out, which Italy won 3-2. Rashford, Jadon Sancho and Bukayo Saka were all subjected to sickening racial abuse on social media following England's heartbreak. On Monday night, the England star took to Twitter to send out a powerful message, saying "my penalty was not good enough, it should have gone in but I will never apologise for who I am and where I come from".</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+    
+        </section>
     </main>
     <footer>
         <div class="footer">
